src/test/ui/wf/wf-trait-fn-ret.stderr
error[E0277]: the trait bound `Self: std::cmp::Eq` is not satisfied
  --> $DIR/wf-trait-fn-ret.rs:10:5
   |
LL | struct Bar<T:Eq+?Sized> { value: Box<T> }
   | ----------------------- required by `Bar`
...
LL |     fn bar(&self) -> &Bar<Self>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |     |                          |
   |     |                          help: consider further restricting `Self`: `where Self: std::cmp::Eq`
   |     the trait `std::cmp::Eq` is not implemented for `Self`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
